UPDATE: adjust FPS to ensure 'bird to tube' time

--- a/settings.json
+++ b/settings.json
@@ -5,11 +5,12 @@
 		"Gravity": 1e-05,
 		"Floor_Height": 0.1,
 		"Floor_Cycle": 24,
-		"nTubes": 2,
+		"nTubes": 1,
 		"Threshold_Size": [0.05,0.1],
 		"Text_Size": 0.1
 	},
 	"SIMULATE": 1,
+	"T_BIRDtoTUBE": 15,
 	"SHAPING": 1,
 	"BestScore": 3
 }
